Fix: List Item Overlapping issue, Add: Option to create new list item on pressing Enter Key

--- a/inc/admin/css/wp-table-builder-admin.css
+++ b/inc/admin/css/wp-table-builder-admin.css
@@ -822,50 +822,42 @@ td:empty {
     width: 100%;
 }
 
-.wptb-droppable.wptb-cell ul.disc-typed li .list-item-style-dot {
+.wptb-droppable.wptb-cell ul.disc-typed li .wptb-list-item-style-dot {
     background: url(../img/disc.jpg);
 }
 
-.wptb-droppable.wptb-cell ul.circle-typed li .list-item-style-dot {
+.wptb-droppable.wptb-cell ul.circle-typed li .wptb-list-item-style-dot {
     background: url(../img/circle.jpg);
 }
 
-.wptb-droppable.wptb-cell ul.square-typed li .list-item-style-dot {
+.wptb-droppable.wptb-cell ul.square-typed li .wptb-list-item-style-dot {
     background: url(../img/square.jpg);
 }
 
 .wptb-droppable.wptb-cell ul li {
     border: 1px solid transparent;
     display: flex;
-    align-items: center;
+    align-items: baseline;
     justify-content: start;
     margin-bottom: 0;
     width: 100%;
 }
 
-.wptb-droppable.wptb-cell ul li:hover {
-    display: flex;
-    align-items: center;
-    justify-content: start;
-    margin-bottom: 0;
-}
-
-.wptb-droppable.wptb-cell ul li .list-item-content,
-.wptb-droppable.wptb-cell ul li .list-item-style-dot {
+.wptb-droppable.wptb-cell ul li .wptb-list-item-content,
+.wptb-droppable.wptb-cell ul li .wptb-list-item-style-dot {
     border: 1px solid transparent;
-    height: 30px;
 }
 
-.wptb-droppable.wptb-cell ul li .list-item-content:hover,
-.wptb-droppable.wptb-cell ul li .list-item-style-dot:hover {
+.wptb-droppable.wptb-cell ul li .wptb-list-item-content:hover,
+.wptb-droppable.wptb-cell ul li .wptb-list-item-style-dot:hover {
     cursor: pointer;
 }
 
-.wptb-droppable.wptb-cell ul li .list-item-style-dot {
+.wptb-droppable.wptb-cell ul li .wptb-list-item-style-dot {
     width: 30px;
 }
 
-.wptb-droppable.wptb-cell .directlyhovered {
+.wptb-droppable.wptb-cell .wptb-directlyhovered {
     border: 1px solid #1ea5e5 !important;
     position: relative;
 }
